<resources>
    <string name="app_name">UTS_IF6_10120222_MARTINUSCELVYN</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daily_activty">Daily Activty</string>
    <string name="gallery">Gallery</string>
    <string name="music_video"><![CDATA[Music & Video]]></string>
    <string name="profile">Profile</string>
    <string name="maps">Maps</string>
    <string name="martinus_celvyn">Martinus Celvyn</string>
    <string name="student_informatics_engineering_2020">Student : Informatics Engineering : 2020</string>
    <string name="active">active</string>
    <string name="find_me">Find Me</string>
    <string name="location">Location</string>
    <string name="kp_cilebak_rt_02_rw_02_ds_rancamanyar_nkab_bandung_jawa_barat">Kp.Cilebak RT.02 RW.02, Ds. Rancamanyar\nKab. Bandung, Jawa Barat</string>
    <string name="titik">.</string>
    <string name="hai_martinus">Hai.. Martinus</string>
    <string name="my_favorit_music_now">My Favorit Music Now</string>
    <string name="favorit_music">Favorit Music</string>
    <string name="the_man_who_can_t_be_moved">The Man Who Can\'t Be Moved</string>
    <string name="the_script">The Script</string>
    <string name="marvin_gaye_feat_meghan_trainor">Marvin Gaye (feat. Meghan Trainor)</string>
    <string name="charlie_puth_meghan_trainor">Charlie Puth, Meghan Trainor</string>
    <string name="love_story">Love Story</string>
    <string name="taylor_swift">Taylor Swift</string>
    <string name="when_i_was_your_man">When I Was Your Man</string>
    <string name="bruno_mars">Bruno Mars</string>
    <string name="lucky">Lucky</string>
    <string name="jason_mraz_colbie_caillat">Jason Mraz, Colbie Caillat</string>
    <string name="usai">Usai</string>
    <string name="tiara_andini">Tiara Andini</string>
    <string name="summer_peradise">Summer Peradise</string>
    <string name="simple_plan">Simple Plan</string>
    <string name="deskripsi">Hai.. Saya Martinus Celvyn kalian bisa panggil\nsaya martinus. Saya lahir di Bandung dan\nsekarang sedang menempuh perkuliahan\ndi UNIKOM</string>
    <string name="martinus_celvyn_21">Martinus Celvyn, 21</string>
    <string name="indonesia_bandung">Indonesia, Bandung</string>
    <string name="interest">Interest</string>
    <string name="dokter">Dokter</string>
    <string name="gaming">Gaming</string>
    <string name="swiming">Swiming</string>
    <string name="badminton">Badminton</string>
    <string name="running">Running</string>
    <string name="discover">Discover</string>
    <string name="waiting">Waiting....</string>
    <string name="reading">Reading</string>
    <string name="_15">15%</string>
    <string name="gaming1">Gaming</string>
    <string name="course">Course</string>
    <string name="_35">35%</string>
    <string name="_50">50%</string>
    <string name="my_friend">My Friend</string>
    <string name="rahma">Rahma</string>
    <string name="icshan">Icshan</string>
    <string name="alya">Alya</string>
    <string name="bram">Bram</string>
    <string name="_350">35%</string>
    <string name="complete">complete</string>
    <string name="coding">Coding</string>
    <string name="_292">292</string>
    <string name="contact">Contact</string>
    <string name="friends_list">Friends List</string>
    <string name="_151">15%</string>
    <string name="complate">Complate</string>
    <string name="running1">Running</string>
    <string name="daily_task">Daily Task</string>
    <string name="dialog">Dialog !!!</string>
    <string name="this_app_caveat_can_make_you_feel_nlike_using_it_for_a_long_time_and_ni_was_pretty_tired_working_on_it">This app caveat can make you feel\nlike using it for a long time and\nI was pretty tired working on it</string>
    <string name="close">CLOSE</string>
    <string name="river">River</string>
    <string name="montain">Montain</string>
    <string name="nature">Nature</string>
    <string name="city">City</string>
    <string name="beach">Beach</string>
    <string name="instagram">Instagram</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="email">Email</string>
    <string name="about">About!</string>
    <string name="haii_this_is_my_app">HAII.. THIS IS MY APP</string>
    <string name="selamat_datang_di_app_saya_anda_akan_mendapatkan_pengalaman_baru_dalam_menggunakannya_nterima_kasih_sudah_mendownloadnya">Selamat datang di App saya anda akan mendapatkan pengalaman baru dalam menggunakannya\nTerima Kasih Sudah Mendownloadnya</string>
    <string name="daily">DAILY</string>
    <string name="daily_merupakan_salah_satu_menu_andalan_saya_yang_dimana_apa_bila_anda_menggunakan_app_ini_maka_anda_akan_di_mudahkan_dalam_mengingat_aktivitas_yang_belum_dan_sudah_dilakukan">Daily merupakan salah satu menu andalan saya yang dimana apa bila anda menggunakan App ini maka anda akan di mudahkan dalam mengingat aktivitas yang belum dan sudah dilakukan</string>
    <string name="gallery1">GALLERY</string>
    <string name="selanjutnya_app_ini_memiliki_menu_gallery_yang_dimana_kamu_dapat_menambahkan_bahkan_mengingat_momen_monen_berharga_anda_yang_dapat_anda_pilah_sesuai_dengan_judul_gambar_tersebut">Selanjutnya App ini memiliki menu Gallery yang dimana kamu dapat menambahkan bahkan mengingat momen monen berharga anda yang dapat anda pilah sesuai dengan judul gambar tersebut</string>
    <string name="gallery2">GALLERY</string>
    <string name="music">MUSIC</string>
    <string name="selanjutnya_app_ini_memiliki_menu_gallery_yang_dimana_kamu_dapat_menambahkan_bahkan_mengingat_momen_monen_berharga_anda_yang_dapat_anda_pilah_sesuai_dengan_judul_gWambar_tersebut">Selanjutnya App ini memiliki menu Gallery yang dimana kamu dapat menambahkan bahkan mengingat momen monen berharga anda yang dapat anda pilah sesuai dengan judul gambar tersebut</string>
    <string name="masuk">MASUK</string>
    <string name="dan_menu_selanjutnya_adalah_music_yang_dimana_anda_dapat_menambahkan_update_musik_kesukaan_kalian_dan_dapat_menjalankan_musik_musik_yang_sedang_populer">Dan menu selanjutnya adalah Music yang dimana anda dapat menambahkan update musik kesukaan kalian dan dapat menjalankan musik musik yang sedang populer</string>
</resources>