<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dialog.CustomDialogFragment">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/this_app_caveat_can_make_you_feel_nlike_using_it_for_a_long_time_and_ni_was_pretty_tired_working_on_it"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/dialogTitle"
        app:layout_constraintStart_toStartOf="@+id/dialogTitle"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialogButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/burem"
        android:text="@string/close"
        app:layout_constraintEnd_toEndOf="@+id/txt_dialog"
        app:layout_constraintStart_toStartOf="@+id/txt_dialog"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>